load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "assets",
    srcs = ["assets.go"],
    embedsrcs = [
        "assets/MaterialIcons-Regular.ttf",
        "assets/MaterialIcons-Regular.woff",
        "assets/MaterialIcons-Regular.woff2",
        "assets/angry.png",
        "assets/broken.png",
        "assets/hungry.png",
        "assets/material-icons.css",
        "assets/material.min.css",
        "assets/material.min.css.map",
        "assets/material.min.js",
        "assets/material.min.js.map",
        "assets/site.css",
        "assets/thumbs-up.png",
        "assets/tired.png",
    ],
    importpath = "github.com/enfabrica/enkit/auth/server/assets",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":assets",
    visibility = ["//visibility:public"],
)
